# mesh-security-hackathon

./: .editorconfig  .gitignore  Cargo.toml  DEVELOPMENT.md  NOTICE  README.md  docker-compose.yml  justfile  package.json
.cargo/: config
.circleci/: config.yml
.github/: dependabot.yml
artifacts/: checksums.txt  checksums_intermediate.txt  mesh_consumer.wasm  mesh_lockup.wasm  mesh_provider.wasm  mesh_slasher.wasm  meta_staking.wasm
ci-scripts/osmosis/: README.md  start.sh
ci-scripts/wasmd/: README.md  start.sh
contracts/mesh-consumer/: Cargo.toml
contracts/mesh-consumer/src/: contract.rs  error.rs  helpers.rs  ibc.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/mesh-consumer/src/testing/: mod.rs  test_contract.rs  test_ibc.rs  test_ibc_ack.rs  test_ibc_receive.rs
contracts/mesh-consumer/src/testing/utils/: executes.rs  helpers.rs  mod.rs  setup.rs
contracts/mesh-ilp/: Cargo.toml
contracts/mesh-ilp/src/: contract.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/mesh-ilp/src/multitest/: bonding.rs  mock_grantee.rs  suite.rs
contracts/mesh-lockup/: Cargo.toml
contracts/mesh-lockup/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/mesh-lockup/src/multitest/: bonding.rs  mock_grantee.rs  suite.rs
contracts/mesh-provider/: Cargo.toml
contracts/mesh-provider/src/: contract.rs  error.rs  helpers.rs  ibc.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/mesh-provider/src/testing/: mod.rs  test_contract.rs  test_ibc.rs  test_instantiate.rs  test_queries.rs
contracts/mesh-provider/src/testing/utils/: execute.rs  executes.rs  helpers.rs  ibc_helpers.rs  mod.rs  queries.rs  query.rs  setup.rs  setup_unit.rs
contracts/mesh-slasher/: Cargo.toml
contracts/mesh-slasher/src/: contract.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/mesh-vault/: Cargo.toml
contracts/mesh-vault/src/: contract.rs  helpers.rs  multitest.rs  state.rs
contracts/meta-staking/: Cargo.toml
contracts/meta-staking/.cargo/: config
contracts/meta-staking/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/meta-staking/src/testing/: consumer.rs  delegations.rs  execute.rs  helpers.rs  instantiate.rs  integration.rs  integration_tests.rs  mod.rs  queries.rs  rewards.rs  test_consumer.rs  test_delegations.rs  test_queries.rs  test_rewards.rs  tests.rs  withdraw_to_consumer.rs
contracts/meta-staking/src/testing/helpers/: contract_wrapper.rs  execute.rs  instantiate.rs  mod.rs  queries.rs  setup.rs  setup_app.rs  utils.rs
contracts/meta-staking/src/testing/utils/: execute.rs  executes.rs  instantiate.rs  mod.rs  queries.rs  rewards.rs  setup.rs  setup_app.rs  utils.rs
contrib/local/: setup.sh
devtools/: build_integration_wasm.sh  optimize.sh
docker/: Makefile
docker/juno/: Dockerfile
docker/osmosis/: Dockerfile
docker/ts-relayer/: Dockerfile
docs/: Provider.md  README.md  ROADMAP.md  UseCases.md  Vault.md
docs/consumer/: Consumer.md  Converter.md  Receiver.md  VirtualStaking.md
docs/ibc/: Overview.md  Rewards.md  Slashing.md  Staking.md
docs/provider/: LocalStaking.md  Provider.md  Vault.md
k8s/: Makefile
k8s/base/juno/: configmap.yaml  genesis.yaml  kustomization.yaml  validator.yaml
k8s/base/juno/configs/: keys.json  validators.json
k8s/base/osmosis/: configmap.yaml  genesis.yaml  kustomization.yaml  validator.yaml
k8s/base/osmosis/configs/: keys.json  validators.json
k8s/base/relayer/: kustomization.yaml  ts-relayer.yaml
k8s/base/relayer/configs/: ts-app.yaml  ts-config.yaml
k8s/dev-hackwasm/juno/: kustomization.yaml
k8s/dev-hackwasm/osmosis/: kustomization.yaml
k8s/dev-hackwasm/relayer/: kustomization.yaml
k8s/local/juno/: genesis.yaml  kustomization.yaml  validator.yaml
k8s/local/osmosis/: genesis.yaml  kustomization.yaml  validator.yaml
k8s/local/relayer/: kustomization.yaml  ts-relayer.yaml
scripts/: build_integration_wasm.sh  create_clients.sh  schema.sh
tests/: .eslintrc.json  .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
tests/internal/: simple_ica_controller.wasm  simple_ica_host.wasm
tests/src/: cosmwasm.spec.ts  utils.ts
tests/src/bindings/: CallbackCapturer.client.ts  CallbackCapturer.types.ts  MeshConsumer.client.ts  MeshConsumer.types.ts  MeshLockup.client.ts  MeshLockup.types.ts  MeshProvider.client.ts  MeshProvider.types.ts  MeshSlasher.client.ts  MeshSlasher.types.ts  MetaStaking.client.ts  MetaStaking.types.ts
tests/src/contracts/: mesh_consumer.wasm  mesh_ilp.wasm  mesh_lockup.wasm  mesh_provider.wasm  mesh_slasher.wasm  meta_staking.wasm
tests/src/scripts/: config.ts  deploy-contracts.ts  helpers.ts  networks.ts
typescript/: package.json
typescript/contracts/mesh-consumer/: MeshConsumer.client.ts  MeshConsumer.types.ts  bundle.ts
typescript/contracts/mesh-lockup/: MeshLockup.client.ts  MeshLockup.types.ts  bundle.ts
typescript/contracts/mesh-provider/: MeshProvider.client.ts  MeshProvider.types.ts  bundle.ts
typescript/contracts/mesh-slasher/: MeshSlasher.client.ts  MeshSlasher.types.ts  bundle.ts
typescript/contracts/meta-staking/: MetaStaking.client.ts  MetaStaking.types.ts  bundle.ts
typescript/src/: codegen.ts
