[package]
name = "mesh-provider"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Jake Hartnell <jakehartnell@users.noreply.github.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
mesh-apis = { path = "../../packages/mesh-apis", version = "0.1.0" }
mesh-ibc = { path = "../../packages/mesh-ibc", version = "0.1.0" }
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.5"
cosmwasm-storage = "1.1.5"
cw-controllers = "0.16.0"
cw-utils = "0.16.0"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }

[dev-dependencies]
cw-multi-test = "0.16.0"
mesh-slasher = { path = "../mesh-slasher", version = "0.1.0", features = ["library"] }
