[package]
name    = "meta-staking"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Jake Hartnell <jakehartnell@users.noreply.github.com>"]

edition       = { workspace = true }
version       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
exclude       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.9
"""

[dependencies]
mesh-apis        = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
cw2              = { workspace = true }
schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
mesh-testing  = { workspace = true }
cw-multi-test = { workspace = true }
mesh-consumer = { workspace = true }
anyhow        = { workspace = true }
